--- a/index.html
+++ b/index.html
@@ -1,104 +1,205 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Braineer - Academia Preuniversitaria</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Braineer – Academia Preuniversitaria | Metodología de élite y resultados reales</title>
+  <meta name="description" content="Academia preuniversitaria en Arequipa con docentes expertos, plan personalizado, simulacros tipo admisión y seguimiento 1:1. Resultados comprobados." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --primary: #1E3A8A;
+      --secondary: #7C3AED;
+      --overlay: rgba(0,0,0,0.55);
+      --text-light: #F9FAFB;
+      --muted: #D1D5DB;
+      --radius: 16px;
+    }
+
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0a183d;
-      color: white;
+      font-family: 'Inter', sans-serif;
+      background-color: #fff;
+      color: #111827;
+      overflow-x: hidden;
     }
+
     header {
-      background-color: #08122f;
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-      color: #FFA726;
-    }
-    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 10;
+      background: rgba(255,255,255,0.85);
+      backdrop-filter: blur(12px);
       display: flex;
-      justify-content: center;
-      background-color: #0d2557;
-      padding: 10px;
+      justify-content: space-between;
+      align-items: center;
+      padding: 16px 48px;
+      border-bottom: 1px solid #e5e7eb;
     }
+
+    .logo {
+      font-family: 'Poppins', sans-serif;
+      font-weight: 800;
+      font-size: 1.3rem;
+      color: var(--primary);
+    }
+
     nav a {
-      color: white;
+      margin: 0 14px;
+      font-weight: 500;
+      color: #111827;
       text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
+      transition: 0.3s;
     }
-    section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .cta {
-      background-color: #ffa726;
-      color: #0a183d;
-      padding: 15px 30px;
-      text-align: center;
-      display: inline-block;
-      border-radius: 5px;
-      font-weight: bold;
+    nav a:hover { color: var(--primary); }
+
+    .btn {
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
+      color: #fff;
+      padding: 10px 24px;
+      border-radius: 9999px;
+      font-weight: 600;
       text-decoration: none;
+      transition: 0.3s;
+      border: none;
     }
-    footer {
+    .btn:hover { opacity: 0.9; }
+
+    /* HERO SECTION */
+    section.hero {
+      position: relative;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
+      color: var(--text-light);
+      overflow: hidden;
+    }
+
+    .hero video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -2;
+    }
+
+    .hero::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: var(--overlay);
+      z-index: -1;
+    }
+
+    .hero-content {
+      max-width: 780px;
       padding: 20px;
-      background-color: #08122f;
-      font-size: 0.9em;
-      color: #ccc;
+      color: #fff;
+    }
+
+    .hero-content h1 {
+      font-family: 'Poppins', sans-serif;
+      font-size: 3.2rem;
+      font-weight: 800;
+      margin-bottom: 1rem;
+      line-height: 1.2;
+      text-shadow: 0 4px 10px rgba(0,0,0,0.5);
+    }
+
+    .hero-content p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+      color: var(--muted);
+    }
+
+    /* FEATURES */
+    section.features {
+      background: #fff;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 24px;
+      padding: 100px 48px;
+    }
+
+    .feature {
+      background: #F9FAFB;
+      border-radius: var(--radius);
+      padding: 24px;
+      text-align: center;
+      box-shadow: 0 8px 18px rgba(0,0,0,0.06);
+      transition: transform 0.3s ease;
+    }
+
+    .feature:hover { transform: translateY(-6px); }
+
+    .feature h3 {
+      font-family: 'Poppins', sans-serif;
+      color: var(--primary);
+    }
+
+    footer {
+      background: var(--primary);
+      color: #fff;
+      text-align: center;
+      padding: 24px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>BRAINEER</h1>
-    <p>academia preuniversitaria</p>
+    <div class="logo">Braineer Preu</div>
+    <nav>
+      <a href="#metodologia">Metodología</a>
+      <a href="#resultados">Resultados</a>
+      <a href="#programas">Programas</a>
+      <a href="#contacto" class="btn">Inscríbete</a>
+    </nav>
   </header>
-  <nav>
-    <a href="#inicio">Inicio</a>
-    <a href="#nosotros">Nosotros</a>
-    <a href="#cursos">Cursos</a>
-    <a href="#testimonios">Testimonios</a>
-    <a href="#contacto">Contacto</a>
-  </nav>
-  <section id="inicio">
-    <h2>Bienvenido a Braineer</h2>
-    <p>La academia preuniversitaria que forma a los futuros mejores ingenieros del país.</p>
-    <a href="#contacto" class="cta">Inscríbete ahora</a>
+
+  <section class="hero">
+    <video autoplay muted loop playsinline>
+      <source src="videos/fondo.mp4" type="video/mp4">
+    </video>
+    <div class="hero-content">
+      <h1>Transforma tu esfuerzo en resultados reales</h1>
+      <p>En Braineer preparamos historias de éxito, no solo estudiantes. Con metodología probada, docentes de gran experiencia y seguimiento personalizado.</p>
+      <a href="#metodologia" class="btn">Descubre cómo</a>
+    </div>
   </section>
-  <section id="nosotros">
-    <h2>Sobre nosotros</h2>
-    <p>En Braineer, nos dedicamos a preparar jóvenes con ambición y talento para ingresar a las mejores universidades del país. Nuestro enfoque es académico, técnico y humano.</p>
+
+  <section class="features">
+    <div class="feature">
+      <h3>Metodología Personalizada</h3>
+      <p>Planes diseñados a tu medida, con diagnóstico inicial y seguimiento semanal para maximizar tus resultados.</p>
+    </div>
+    <div class="feature">
+      <h3>Docentes de Élite</h3>
+      <p>Profesores con experiencia en preparación para los exámenes más exigentes del país.</p>
+    </div>
+    <div class="feature">
+      <h3>Resultados Comprobados</h3>
+      <p>Más del 85% de nuestros estudiantes logra ingresar en su primer intento.</p>
+    </div>
   </section>
-  <section id="cursos">
-    <h2>Nuestros cursos</h2>
-    <ul>
-      <li>Matemática avanzada</li>
-      <li>Razonamiento lógico</li>
-      <li>Física preuniversitaria</li>
-      <li>Simulacros tipo admisión</li>
-    </ul>
-  </section>
-  <section id="testimonios">
-    <h2>Testimonios</h2>
-    <p>"Gracias a Braineer ingresé en mi primera opción en ingeniería. Son los mejores." – Ana, 17 años</p>
-  </section>
-  <section id="contacto">
-    <h2>Contacto</h2>
-    <p>Escríbenos por WhatsApp: <a class="cta" href="https://wa.me/51999999999">+51 999 999 999</a></p>
-    <p>O envíanos un correo: contacto@braineer.com</p>
-  </section>
+
   <footer>
-    &copy; 2025 Braineer - Todos los derechos reservados
+    © <span id="year"></span> Braineer – Todos los derechos reservados.
   </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
