--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
   <section class="hero">
     <video autoplay muted loop playsinline>
-      <source src="videos/fondo.mp4" type="video/mp4">
+      <source src="videos/fondo2.mp4" type="video/mp4">
     </video>
     <div class="hero-content">
       <h1>Transforma tu esfuerzo en resultados reales</h1>
